--- a/app/views/welcome.scala.html
+++ b/app/views/welcome.scala.html
@@ -76,6 +76,14 @@ GET     /               controllers.HomeController.index</code></pre>
         <a href="@routes.CustomController.custom()">Click here for the CustomController action!</a>
     </p>
 
+    <h2>Form Controller</h2>
+
+    Form Controller <code>FormController.scala</code> shows a Form with POST.
+
+    <p>
+        <a href="@routes.FormController.form()">Click here for the Form</a>
+    </p>
+
 
     <h2>Welcome from welcome template: @customerName</h2>
 
